Thêm logout cho profile

--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -59,6 +59,12 @@
                                                 History
                                             </a>
                                         </li>
+                                        <li style="width: 100%; margin: 0;">
+                                            <a asp-action="Logout" asp-controller="Account">
+                                                <i class="fa fa-door-closed"></i>
+                                                Logout
+                                            </a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li class="dropdown-toggle dropdown" data-toggle="dropdown">
