sửa table admin

--- a/AppEducation/AppEducation/Views/Account/Profile.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Profile.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Profile";
     Layout = "_LayoutAccount";
 }
-
+@section Head {
+    <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
+    <link rel="stylesheet" href="~/pages/profile/css/bootstrap.css">
+    <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
+}
 <section>
     <div class="main">
         <div class="user-layout">
