--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -4,12 +4,14 @@
     Layout = "_LayoutAccount";
 }
 @model Classes
-<head>
-    @{
-        ViewBag.Title = "Create Page";
-    }
+@{
+    ViewBag.Title = "Create Page";
+}
+@section Head {  
+    <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
+    <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="~/pages/create/css/create.css" />
-</head>
+}
 <section>
     <div class="container">
         <div class="row">
