--- a/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ViewData["Title"] - Admin </title>
   <link rel="stylesheet" href="~/pages/admin/css/main.css">
+  <link rel="stylesheet" href="~/pages/admin/css/table.css">
+  <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
+  <!-- DataTables -->
+  <link rel="stylesheet" href="~/pages/admin/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="~/pages/admin/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="~/pages/admin/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
   @RenderSection("Head", required: false)
 </head>
 
@@ -84,6 +90,25 @@
   </div>
 
   @RenderSection("Script", required: false)
-  <script src="~/pages/admin/js/main.js"></script>
+  
+  <!-- jQuery -->
+<script src="~/pages/admin/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="~/pages/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Datatable plugins -->
+<script src="~/pages/admin/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+<script src="~/pages/admin/plugins/jszip/jszip.min.js"></script>
+<script src="~/pages/admin/plugins/pdfmake/pdfmake.min.js"></script>
+<script src="~/pages/admin/plugins/pdfmake/vfs_fonts.js"></script>
+<script src="~/pages/admin/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+<script src="~/pages/admin/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+<script src="~/pages/admin/js/main.js"></script>
+<script src="~/pages/admin/js/table.js"></script>
 </body>
 </html>
