--- a/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
@@ -39,8 +39,8 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="account-area text-right">
                             <ul>
-                                <li><a asp-area="" asp-controller="Client" asp-action="Register">Đăng ký</a></li>
-                                <li><a asp-area="" asp-controller="Client" asp-action="Login">Đăng nhập</a></li>
+                                <li><a asp-area="" asp-controller="Account" asp-action="Register">Đăng ký</a></li>
+                                <li><a asp-area="" asp-controller="Account" asp-action="Login">Đăng nhập</a></li>
                             </ul>
                         </div>
                     </div>
