--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -4,12 +4,13 @@
     Layout = "_LayoutAccount";
 }
 @model Classes
-<head>
-    @{
-        ViewBag.Title = "Create Page";
-    }
-    <link type="text/css" rel="stylesheet" href="~/pages/create/css/create.css" />
-</head>
+    <head>
+        @{
+            ViewBag.Title = "Create Page";
+        }
+        <link type="text/css" rel="stylesheet" href="~/pages/create/css/create.css">
+        <link type="text/css" rel="stylesheet" href="~/pages/create/css/bootstrap.min.css">
+    </head>
 <section>
     <div class="container">
         <div class="row">
@@ -23,12 +24,12 @@
                     <div class="button-container">
                         <a href="#" onclick="document.getElementById('id01').style.display='block'">
                             <button type="button" class="btn btn-primary">
-                                <i class="fas fa-video"></i>Bắt Đầu
+                                Bắt Đầu
                             </button>
                         </a>
                         <a href="#" onclick="document.getElementById('id02').style.display='block'">
                             <button type="button" class="btn btn-primary">
-                                <i class="fas fa-file-powerpoint"></i>Vào Lớp
+                                </i>Vào Lớp
                             </button>
                         </a>
                     </div>
@@ -44,62 +45,91 @@
     </div>
 </section>
 <div id="id01" class="modal">
-    <div class="cont-create">
-        <form class="modal-content" method="post" asp-action="Create" asp-controller="JoinClass">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="cont-center">
-                <div class="imgcontainer">
-                    <h2 class="title">Tạo Lớp Học Mới</h2>
-                </div>
-                <div class="input-div one">
-                    <div class="i"></div>
-                    <div class="div">
-                        <h5>Ma Phong</h5>
-                        <input type="text" class="input" asp-for="ClassID">
-                    </div>
-                </div>
-                <div class="input-div one">
-                    <div class="i"></div>
-                    <div class="div">
-                        <h5>Tên Lớp</h5>
-                        <input type="text" class="input" asp-for="ClassName">
-                    </div>
-                </div>
-                <div class="input-div one">
-                    <div class="i"></div>
-                    <div class="div">
-                        <h5>Topic</h5>
-                        <input type="text" class="input" asp-for="Topic">
-                    </div>
-                </div>
-                <div class="button-div">
-                    <input type="submit" class="btn btn-primary">
-                    <input type="button" onclick="document.getElementById('id01').style.display='none'" class="btn btn-primary" value="Cancel" />
+    <form class="modal-content animate" method="post" asp-action="Create" asp-controller="JoinClass">
+        <div class="container">
+            <div class="title">
+                <h1>Đăng Kí Lớp</h1>
+            </div>
+            <div class="contact-form">
+                <div class="input-fields">
+                    <input type="text" class="input" placeholder="Mã Phòng" asp-for="ClassID">
+                    <input type="text" class="input" placeholder="Tên Lớp" asp-for="ClassName">
+                    <input type="text" class="input" placeholder="Chủ Đề" asp-for="Topic">
                 </div>
             </div>
-        </form>
-    </div>
+            <button type="submit" class="taolop">Tạo Lớp</button>
+            <button onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Hủy</button>
+        </div>
+    </form>
 </div>
 <div id="id02" class="modal">
-    <div class="cont-create">
-        <form class="modal-content" method="post" asp-action="Join" asp-controller="JoinClass">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="cont-center">
-                <div class="imgcontainer">
-                    <h2 class="title">Vào Lớp Học</h2>
-                </div>
-                <div class="input-div one">
-                    <div class="i"></div>
-                    <div class="div">
-                        <h5>Ma Phong</h5>
-                        <input type="text" class="input" asp-for="ClassID">
+    <div class="modal-content-create cont-create">
+        <div class="container">
+            <div class="row">
+                <h1 class="text-center">Danh Sách Lớp</h1>
+                <hr>
+                <div class="col-md-4 product-grid">
+                    <div class="swiper-slide">
+                        <div class="slider-box">
+                            <p class="time">Lớp</p>
+                            <div class="img-box">
+                                <img src="~/pages/create/img/icon.jpeg">
+                            </div>
+                            <p class="detail">Chủ đề : học nói</p>
+                            <div class="cart">
+                                <a href="#">vào lớp</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="button-div">
-                    <input type="submit" class="btn btn-primary" value="Submit" />
-                    <input type="button" onclick="document.getElementById('id02').style.display='none'" class="btn btn-primary" value="Cancel" />
+                <div class="col-md-4 product-grid">
+                    <div class="swiper-slide">
+                        <div class="slider-box">
+                            <p class="time">Lớp</p>
+                            <div class="img-box">
+                                <img src="~/pages/create/img/icon.jpeg">
+                            </div>
+                            <p class="detail">Chủ đề : học nói</p>
+                            <div class="cart">
+                                <a href="#">vào lớp</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 product-grid">
+                    <div class="swiper-slide">
+                        <div class="slider-box">
+                            <p class="time">Lớp</p>
+                            <div class="img-box">
+                                <img src="~/pages/create/img/icon.jpeg">
+                            </div>
+                            <p class="detail">Chủ đề : học nói</p>
+                            <div class="cart">
+                                <a href="#">vào lớp</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 product-grid">
+                    <div class="swiper-slide">
+                        <div class="slider-box">
+                            <p class="time">Lớp</p>
+                            <div class="img-box">
+                                <img src="~/pages/create/img/icon.jpeg">
+                            </div>
+                            <p class="detail">Chủ đề : học nói</p>
+                            <div class="cart">
+                                <a href="#">vào lớp</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </form>
+            <hr>
+            <div class="close-set">
+                <input type="button" onclick="document.getElementById('id02').style.display='none'" class="btn btn-primary" value="Cancel" />
+            </div>
+        </div>
     </div>
 </div>
+<script src="~/pages/create/bootstrap.min.js"></script>
