--- a/AppEducation/AppEducation/wwwroot/pages/create/css/create.css
+++ b/AppEducation/AppEducation/wwwroot/pages/create/css/create.css
@@ -29,21 +29,6 @@
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.30);
     margin: 30% 0 0 50px;
 }
-.modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-}
-.modal-content {
-    width: 70%; 
-}
 .cont-center{
     position: relative;
     width: 600px;
@@ -58,97 +43,164 @@
 }
 .cont-create{
 	display: flex;
-	justify-content: flex-start;
-	align-items: center;
     text-align: center;
-    width: 60%;
-    height: auto;
+    left: 0;
+    top: 0;
+    height: 80%;
+    width: 80%;
+    background-color: #fefefe;
+    border: none;
+    overflow: auto;
+}
+.product-grid{
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+.swiper-slide{
+    width:250px !important;
+}
+.slider-box{
+    margin:20px;
+    height:350px;
+    width:250px;
+    position:relative;
+    background-color:#FFFFFF;
+    border-radius:5px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    border:1px solid rgba(187,187,187,0.40);
+}
+.slider-box a{
+    text-decoration:none;
+    text-align:center;}
+.img-box{
+    height:170px;
+}
+.img-box img{
+    height:auto;
+    max-width:100%;
+    max-height:100%;
+}
+.time{
+    position:absolute;
+    top:10px;
+    align-items: center;
+    justify-content: center;
+    color:#f16007;
+    
+}
+.detail{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    box-sizing:border-box;
+    font-size:13px;
+    line-height:35px;}
+.price{
+    color:#FFFFFF;
+    background-color:#ff555b;
+    line-height:20px;}
+.cart{
+    position:absolute;
+    bottom:0px;
+    height:45px;
+    background-color:#ff696e;
+    width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;}
+.cart a{
+    color:#FFFFFF;}
+.slider-box:hover{
+    box-shadow:2px 2px 12px rgba(47,47,47,0.40);
+}
+.slider-box:hover .img-box img{
+    transform:scale(1.07);
+    transition:all ease 0.3s;}
+.cart:hover{
+    transform:scale(1.1);
+    background-color:#fe9048;
+    box-shadow:2px 2px 12px rgba(47,47,47,0.40);
+    transition:all ease 0.1s;}
+.title h1{
+    color:#333;
+    margin-bottom: 25px;
+}
+.contact-form{
+    display: flex;
+  }
+  
+.input-fields{
+    display: flex;
+    flex-direction: column;
+    margin-right: 4%;
+    justify-content: center;
+    align-items: center;
+}
+.input-fields{
+    width: 40%;
+}
+.container {
+    padding: 16px;
+}
+.input-fields .input{
+    margin: 10px 0;
+    background: transparent;
+    border: 0px;
+    border-bottom: 2px solid #c5ecfd;
+    padding: 10px;
+    color: #333;
+    width: 100%;
+}
+button {
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+.taolop{
+    width: 100px;
+    padding: 10px 20px;
+    height: 50px;
+    background-color: #4CAF50;
+}
+button:hover {
+    opacity: 0.8;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+.modal-content {
     background-color: #fefefe;
     margin: 5% auto 15% auto;
-    border-radius: 15px;
-    border: none;
+    border: 1px solid #888;
+    width: 40%;
 }
-.cont-create .input-div{
-	position: relative;
-    display: grid;
-    grid-template-columns: 7% 93%;
-    margin: 25px 0;
-    padding: 5px 0;
-    border-bottom: 2px solid #d9d9d9;
+.cancelbtn {
+    width: 100px;
+    padding: 10px 20px;
+    height: 50px;
+    background-color: #f44336;
 }
-.cont-create .input-div.one{
-	margin-top: 0;
+.modal-content-create{
+    background-color: #fefefe;
+    margin: 0 auto 15% auto;
+    border: 1px solid #888;
+    width: 80%;
 }
-.i{
-	color: #d9d9d9;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.input-div > div{
-    position: relative;
-	height: 45px;
-}
-
-.input-div > div > h5{
-	position: absolute;
-	left: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-	color: #999;
-	font-size: 18px;
-	transition: .3s;
-}
-
-.input-div:before, .input-div:after{
-	content: '';
-	position: absolute;
-	bottom: -2px;
-	width: 0%;
-	height: 2px;
-	background-color: #38d39f;
-	transition: .4s;
-}
-
-.input-div:before{
-	right: 50%;
-}
-
-.input-div:after{
-	left: 50%;
-}
-
-.input-div.focus:before, .input-div.focus:after{
-	width: 50%;
-}
-
-.input-div.focus > div > h5{
-	top: -5px;
-	font-size: 15px;
-}
-
-.input-div.focus > .i > i{
-	color: #38d39f;
-}
-
-.input-div > div > input{
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
-	outline: none;
-	background: none;
-	padding: 0.5rem 0.7rem;
-	font-size: 1.2rem;
-	color: #555;
-	font-family: 'poppins', sans-serif;
-}
-
-.input-div.pass{
-	margin-bottom: 4px;
-}
-.button-div a button{
-    padding:  5px 30px;
+.close-set{
+    margin-bottom: 20px;
 }
