--- a/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
@@ -87,3 +87,9 @@
 </div>
 }
 
+@section Script {
+    <script src="~/jquery/jquery.js"></script>
+    <script src="~/jquery/jquery.min.js"></script>
+    <script src="~/pages/admin/js/viewdetail.js"></script>
+ 
+}
