--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -8,10 +8,13 @@
 @{
     ViewBag.Title = "Create Page";
 }
-@section Head {  
+@section Head {
     <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
     <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="~/pages/create/css/create.css" />
+    <link type="text/css" rel="stylesheet" href="~/pages/create/css/mdb.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 }
 <section>
     <div class="container">
@@ -19,7 +22,7 @@
             <div class="Menu-add-class">
                 <div class="link-follow">
                     <ul>
-                        <li><a href="#" onclick="document.getElementById('id01').style.display='block'"><i class="fa fa-plus-circle"></i></a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#modalSubscriptionForm"><i class="fa fa-plus-circle"></i></a></li>
                     </ul>
                 </div>
                 <h1 class="text-center">Danh Sách Lớp</h1>
@@ -84,22 +87,39 @@
         </div>
     </div>
 </section>
-<div id="id01" class="modal">
-    <form class="modal-content animate" method="post" asp-action="Create" asp-controller="JoinClass">
-        <div class="container">
-            <div class="title">
-                <h1>Đăng Kí Lớp</h1>
+<div class="modal fade" id="modalSubscriptionForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Đăng Kí Lớp</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="contact-form">
-                <div class="input-fields">
-                    <input type="text" class="input" placeholder="Mã Phòng" asp-for="ClassID">
-                    <input type="text" class="input" placeholder="Tên Lớp" asp-for="ClassName">
-                    <input type="text" class="input" placeholder="Chủ Đề" asp-for="Topic">
+            <div class="modal-body mx-3">
+                <div class="md-form mb-5">
+                    <input type="text" id="form3" class="form-control validate">
+                    <label data-error="wrong" data-success="right" for="form3">Mã Phòng</label>
                 </div>
+
+                <div class="md-form mb-4">
+                    <input type="email" id="form2" class="form-control validate">
+                    <label data-error="wrong" data-success="right" for="form2">Tên Lớp</label>
+                </div>
+
+                <div class="md-form mb-4">
+                    <input type="email" id="form2" class="form-control validate">
+                    <label data-error="wrong" data-success="right" for="form2">Chủ Đề</label>
+                </div>
+
             </div>
-            <button type="submit" class="taolop">Tạo Lớp</button>
-            <button onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Hủy</button>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-indigo">Tạo Lớp<i class="fas fa-paper-plane-o ml-1"></i></button>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
 <script src="~/pages/create/bootstrap.min.js"></script>
+<script type="text/javascript" src="~/js/Jquery3.4.1.min.js"></script>
+<script type="text/javascript" src="~/pages/create/mdb.js"></script>
