--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -104,12 +104,12 @@
                 </div>
 
                 <div class="md-form mb-4">
-                    <input type="email" id="form2" class="form-control validate">
+                    <input type="text" id="form2" class="form-control validate">
                     <label data-error="wrong" data-success="right" for="form2" asp-for="ClassName">Tên Lớp</label>
                 </div>
 
                 <div class="md-form mb-4">
-                    <input type="email" id="form2" class="form-control validate">
+                    <input type="text" id="form2" class="form-control validate">
                     <label data-error="wrong" data-success="right" for="form2" asp-for="Topic">Chủ Đề</label>
                 </div>
 
