chỉnh sửa tạo phòng bằng model mới

--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -1,13 +1,8 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Create Page";
     Layout = "_LayoutAccount";
 }
-@model Classes
-
-@{
-    ViewBag.Title = "Create Page";
-}
+@model JoinClassInfor
 @section Head {
     <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
     <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
@@ -90,34 +85,35 @@
 <div class="modal fade" id="modalSubscriptionForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <form class="modal-content" method="post" asp-action="Create" asp-controller="JoinClass">
-            <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Đăng Kí Lớp</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body mx-3">
-                <div class="md-form mb-5">
-                    <input type="text" id="form3" class="form-control validate" asp-for="ClassID">
-                    <label data-error="wrong" data-success="right" for="form3">Mã Phòng</label>
+            <form class="modal-content" method="POST" asp-action="Create" asp-controller="JoinClass">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Đăng Kí Lớp</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <input type="text" id="form3" class="form-control validate" asp-for="NewClass.ClassID">
+                        <label data-error="wrong" data-success="right" for="form3">Mã Phòng</label>
+                    </div>
 
-                <div class="md-form mb-4">
-                    <input type="text" id="form2" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="form2" asp-for="ClassName">Tên Lớp</label>
+                    <div class="md-form mb-4">
+                        <input type="text" id="form2" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="form2" asp-for="NewClass.ClassName">Tên Lớp</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <input type="text" id="form2" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="form2" asp-for="NewClass.Topic">Chủ Đề</label>
+                    </div>
+
                 </div>
-
-                <div class="md-form mb-4">
-                    <input type="text" id="form2" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="form2" asp-for="Topic">Chủ Đề</label>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="submit" class="btn btn-indigo">Tạo Lớp<i class="fas fa-paper-plane-o ml-1"></i></button>
                 </div>
-
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button type="submit" class="btn btn-indigo">Tạo Lớp<i class="fas fa-paper-plane-o ml-1"></i></button>
-            </div>
-        </form>
+            </form>
+         
     </div>
 </div>
 <script src="~/pages/create/bootstrap.min.js"></script>
