--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -32,7 +32,7 @@
                         </div>
                         <p class="detail">Chủ đề : học nói</p>
                         <div class="cart">
-                            <a href="#">vào lớp</a>
+                            <a href="#" data-toggle="modal" data-target="#modalForm">vào lớp</a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                         </div>
                         <p class="detail">Chủ đề : học nói</p>
                         <div class="cart">
-                            <a href="#">vào lớp</a>
+                            <a href="#" data-toggle="modal" data-target="#modalForm">vào lớp</a>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                         </div>
                         <p class="detail">Chủ đề : học nói</p>
                         <div class="cart">
-                            <a href="#">vào lớp</a>
+                            <a href="#" data-toggle="modal" data-target="#modalForm">vào lớp</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         </div>
                         <p class="detail">Chủ đề : học nói</p>
                         <div class="cart">
-                            <a href="#">vào lớp</a>
+                            <a href="#" data-toggle="modal" data-target="#modalForm">vào lớp</a>
                         </div>
                     </div>
                 </div>
@@ -114,6 +114,28 @@
                 </div>
             </form>
          
+    </div>
+</div>
+<div class="modal fade" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form class="modal-content" method="POST">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Nhập Mã Phòng</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-5">
+                    <input type="text" id="form3" class="form-control validate">
+                    <label data-error="wrong" data-success="right" for="form3">Mã Phòng</label>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button type="submit" class="btn btn-indigo">Vào Lớp<i class="fas fa-paper-plane-o ml-1"></i></button>
+            </div>
+        </form>
+
     </div>
 </div>
 <script src="~/pages/create/bootstrap.min.js"></script>
