--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -153,7 +153,7 @@
 
     @RenderBody()
 
-    <footer class="footer">
+    @* <footer class="footer">
         <div class="container" style="padding-top: 70px;">
             <div class="row">
 
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </div>
-    </footer>
+    </footer> *@
 
 
     @RenderSection("Script", required: false)
