--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -40,7 +40,7 @@
                                     </a>
                                     <ul class="dropdown-menu" style="min-width: fit-content;">
                                         <li style="width: 100%; margin: 0;">
-                                            <a href="#user/info">
+                                            <a asp-action="Profile" asp-controller="Account">
                                                 <i class="fa fa-user"></i>
                                                 Your Profile
                                             </a>
