--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -33,6 +33,7 @@
                             <div class="swiper-slide">
                                 <div class="slider-box">
                                     <p class="time">Lớp</p>
+                                    <p class="detail">@classes.ClassName</p>
                                     <div class="img-box">
                                         <img src="~/pages/create/img/icon.jpeg">
                                     </div>
@@ -65,13 +66,13 @@
                     </div>
 
                     <div class="md-form mb-4">
-                        <input type="text" id="form2" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="form2" asp-for="NewClass.ClassName">Tên Lớp</label>
+                        <input type="text" id="form2" class="form-control validate" asp-for="NewClass.ClassName">
+                        <label data-error="wrong" data-success="right" for="form2" >Tên Lớp</label>
                     </div>
 
                     <div class="md-form mb-4">
-                        <input type="text" id="form1" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="form1" asp-for="NewClass.Topic">Chủ Đề</label>
+                        <input type="text" id="form1" class="form-control validate" asp-for="NewClass.Topic">
+                        <label data-error="wrong" data-success="right" for="form1" >Chủ Đề</label>
                     </div>
 
                 </div>
